--- a/index.html
+++ b/index.html
@@ -3,24 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Epic YouTube Transcript Fetcher 🚀</title>
-    <link rel="stylesheet" href="style.css">
+    <title>YouTube Transcript Fetcher</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <div class="container">
-        <h1>🔥 YouTube Transcript Fetcher</h1>
+        <h1>🔥 YouTube Transcript Fetcher 🔥</h1>
         <input type="text" id="videoUrl" placeholder="Enter YouTube Video URL">
-        <button onclick="fetchTranscript()">🚀 Get Transcript</button>
-
-        <div id="transcriptContainer">
-            <h2>📜 Transcript:</h2>
-            <pre id="transcript"></pre>
-            <button onclick="copyTranscript()">📋 Copy</button>
-            <button onclick="downloadTranscript()">⬇️ Download</button>
-        </div>
+        <button onclick="handleAuthClick()">Get Transcript</button>
+        <div id="transcriptContainer"></div>
     </div>
 
+    <!-- Load Google API -->
+    <script src="https://apis.google.com/js/api.js" onload="initGapi()"></script>
     <script src="script.js"></script>
 </body>
 </html>
